GNOME Bugzilla – Bug 783168
Setting custom background color does not work with ubuntu-themes
Last modified: 2017-05-30 08:58:01 UTC
Ubuntu themes (Ambiance and Radiance) use background-image, but gnome panel sets background-color, so it is impossible to set a custom background color or make the panel transparent.