theme: fix custom background color

https://bugzilla.gnome.org/show_bug.cgi?id=783168